# cache

./: .gitignore  CMakeLists.txt  compile.txt  out.txt  testing.txt
include/: cache.hpp  ideal.hpp  s3_fifo.hpp
source/: cache.cpp  ideal.cpp  s3_fifo.cpp
test/: CMakeLists.txt
tests/: run_tests.py  test_generate.py  test_result.out
tests/test_data/: test_1.in  test_10.in  test_2.in  test_3.in  test_4.in  test_5.in  test_6.in  test_7.in  test_8.in  test_9.in
